# funky

./: Cargo.toml  README.md
assets/levels/test1/: meta.ron
game/: README.md  meta.game
game/characters/boye/: meta.char
game/weeks/0/: meta.week
game/weeks/0/songs/0/: meta.song  song.mid
game/weeks/test1/: meta.week
game/weeks/test1/0/: .gitattributes  dialogue_post.txt  meta.song  song.mid
src/: cleanup.rs  main.rs  mk.rs
src/game/: menu_entry.rs  mod.rs  plugin.rs
src/level_select/: menu_entry.rs  mod.rs  plugin.rs
src/menu/: mod.rs
src/meta/: atlas.rs  character.rs  game.rs  mod.rs  song.rs  week.rs
src/settings/: menu_entry.rs  mod.rs  plugin.rs
src/sprite/: mod.rs
src/title/: mod.rs  plugin.rs
